# notion-cli-list-manager

./: .gitignore  CHANGELOG  CHANGELOG.md  LICENSE  main.py  pyproject.toml  readme.md  requirements.txt
notion_cli_list_manager/: main.py  page.py  utils.py
notion_cli_todo_manager/: main.py  page.py  utils.py
src/: config.toml  main.py  page.py  pages.json  utils.py
test/: config.toml  main.py
