[tool.poetry]
name = "notion-cli-list-manager"
version = "0.1.5"
description = "A simple command-line tool for managing Notion databases."
authors = ["Jack Salici"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
typer = "^0.4.0"
colorama = "^0.4.4"
toml = "^0.10.2"
prettytable = "^2.5.0"


[tool.poetry.scripts]
list = "notion_cli_list_manager.main:app"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
